# Comparing-Sorting-Algorithms-using-C

./: CMakeLists.txt  Readme.MD  t1.c  t1.h  t1_test.c  t2.c  t2.h  t2_test.c  t3.c  t4.c  t5.c  t6.c
data/: t4_ign.csv
